- Java classes formatted with new formatter - cleaning unused imports